--- a/BNSN-W003/config.json
+++ b/BNSN-W003/config.json
@@ -23,7 +23,8 @@
 				"D1"
 			],
 			"inputs": [
-                "HDMI1"
+                "HDMI1",
+                "VIA1"
 			],
 			"independentAudios": [
 			]
@@ -33,6 +34,10 @@
       {
           "name": "HDMI1",
           "icon": "settings_input_hdmi"
+      },
+      {
+          "name": "VIA1",
+          "icon": "settings_input_antenna"
       }
   ],
   "audioConfiguration": [
