add a mic into 1108

--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -156,7 +156,8 @@
                 "D3",
                 "D4"
 			],
-			"audioDevices": [
+			"independentAudioDevices": [
+                "MIC1"
 			],
 			"inputs": [
                 "HDMI1",
