add icon config for mic1 in 1108

--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -273,6 +273,10 @@
         {
             "name": "D8",
             "icon": "tv"
+        },
+        {
+            "name": "MIC1",
+            "icon": "mic"
         }
     ],
     "inputConfiguration": [
