add an audioDevice to the list

--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -159,6 +159,9 @@
 			"independentAudioDevices": [
                 "MIC1"
 			],
+            "audioDevices": [
+                "D1"
+            ],
 			"inputs": [
                 "HDMI1",
                 "VIA1",
