--- a/UPC-244/config.json
+++ b/UPC-244/config.json
@@ -6,7 +6,11 @@
         {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
-        }
+        },
+      {
+          "name": "VIA1",
+          "icon": "settings_input_antenna"
+      }
     ],
     "presets": [
 		{
@@ -19,7 +23,8 @@
 				"D1"
 			],
 			"inputs": [
-                "HDMI1"
+                "HDMI1",
+                "VIA1"
 			],
 			"independentAudioDevices": [
 			]
