change ui path for 1108

--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -232,10 +232,9 @@
 		},
 		{
 			"hostname": "ITB-1108-CP8",
-			"uipath": "/blueberry",
+			"uipath": "/cherry",
 			"preset": "Testing",
 			"features": [
-                "share"
 			]
 		},
 		{
