--- a/ITB-1111/config.json
+++ b/ITB-1111/config.json
@@ -15,7 +15,7 @@
     "inputConfiguration": [
         {
             "name": "PC1",
-            "icon": "windows_computer"
+            "icon": "desktop_windows"
         },
         {
             "name": "VIA1",
