updating 1108 to have another MIC

--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -20,7 +20,8 @@
                 "VIA1"
             ],
             "independentAudioDevices": [
-                "MIC1"
+                "MIC1",
+                "MIC2"
             ]
         },
         {
@@ -288,6 +289,10 @@
         },
         {
             "name": "MIC1",
+            "icon": "mic"
+        },
+        {
+            "name": "MIC2",
             "icon": "mic"
         }
     ],
