adding cubeman to johns panel

--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -40,7 +40,9 @@
 			],
 			"inputs": [
                 "ChromeCast",
-                "AppleTV"
+                "AppleTV",
+                "PC1",
+                "VIA1"
 			],
             "shareableDisplays": [
                 "D2",
