--- a/SFH-280/config.json
+++ b/SFH-280/config.json
@@ -6,7 +6,7 @@
 		{
 			"hostname": "SFH-280-CP1",
 			"uipath": "/blueberry",
-			"preset":"Flatpanel",
+			"preset":"Display",
 			"features": [
 			]
 		}
