--- a/HBLL-5724/config.json
+++ b/HBLL-5724/config.json
@@ -6,7 +6,7 @@
 		{
 			"hostname": "HBLL-5724-CP1",
 			"uipath": "/blueberry",
-			"preset":"Flatpanel",
+			"preset":"Display",
 			"features": [
 			]
 		}
