--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -213,7 +213,7 @@
         {
             "hostname": "ITB-1108-CP4",
             "uipath": "/blueberry",
-            "preset": "Station 4",
+            "preset": "Station 1",
             "features": [
                 "share"
             ]
@@ -227,7 +227,7 @@
         {
             "hostname": "ITB-1108-CP6",
             "uipath": "/blueberry",
-            "preset": "Station 3",
+            "preset": "Station 6",
             "features": [
                 "share"
             ]
@@ -243,7 +243,7 @@
         {
             "hostname": "ITB-1108-CP8",
             "uipath": "/cherry",
-            "preset": "Testing",
+            "preset": "Cherry Test",
             "features": []
         },
         {
