--- a/HBLL-2104/config.json
+++ b/HBLL-2104/config.json
@@ -1,5 +1,5 @@
 {
-    "api": "localhost",
+    "api": ["localhost"],
     "panels": [{
         "hostname": "HBLL-2104-CP1",
         "uipath": "/blueberry",
