--- a/HCEB-102C/config.json
+++ b/HCEB-102C/config.json
@@ -22,8 +22,7 @@
 				"D1"
 			],
 			"inputs": [
-                "HDMI1",
-                "PC1"
+                "HDMI1"
 			],
 			"independentAudios": [
 			]
@@ -33,10 +32,6 @@
       {
           "name": "HDMI1",
           "icon": "settings_input_hdmi"
-      },
-      {
-          "name": "PC1",
-          "icon": "computer"
       }
   ],
   "audioConfiguration": [
