fixing the audio array in 1081

--- a/JFSB-1081/config.json
+++ b/JFSB-1081/config.json
@@ -25,7 +25,7 @@
                 "HDMI1",
                 "VIA1"
 			],
-			"independentAudios": [
+            "independentAudioDevices": [
                 "MIC1",
                 "MICJK1"
 			]
