--- a/HBLL-4363/config.json
+++ b/HBLL-4363/config.json
@@ -18,7 +18,7 @@
         ],
         "inputs": [
             "HDMI1",
-            "VIA1",
+            "VIA1"
         ],
         "independentAudioDevices": []
     }],
