adding another HDMI

--- a/ITB-3022/config.json
+++ b/ITB-3022/config.json
@@ -14,7 +14,8 @@
         ],
         "inputs": [
             "VIA1",
-            "HDMI1"
+            "HDMI1",
+            "HDMI2"
         ]
     }],
     "panels": [{
@@ -29,6 +30,10 @@
         },
         {
             "name": "HDMI1",
+            "icon": "settings_input_hdmi"
+        },
+        {
+            "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }
     ],
