--- a/JFSB-B181/old-config.json
+++ b/JFSB-B181/old-config.json
@@ -3,7 +3,7 @@
         "localhost"
     ],
     "panels": [{
-        "hostname": "JFSB-B013-CP1",
+        "hostname": "JFSB-B181-CP1",
         "uipath": "/blueberry",
         "preset": "Display",
         "features": []
@@ -20,6 +20,11 @@
         "inputs": [
             "HDMI1",
             "VIA1"
+        ],
+        "independentAudioDevices": [
+            "MICJK1",
+            "MICJK2",
+            "MIC1"
         ]
     }],
     "inputConfiguration": [{
