adding inputs to madsen

--- a/HFAC-D400/config.json
+++ b/HFAC-D400/config.json
@@ -14,7 +14,9 @@
       ],
       "shareableDisplays": [],
       "inputs": [
-        "HDMI1"
+        "HDMI1",
+        "HDMI2",
+        "HDMI3"
       ],
       "independentAudioDevices": [
         "MICJK1",
@@ -43,6 +45,14 @@
   "inputConfiguration": [
     {
       "name": "HDMI1",
+      "icon": "settings_input_hdmi"
+    },
+    {
+      "name": "HDMI2",
+      "icon": "settings_input_hdmi"
+    },
+    {
+      "name": "HDMI3",
       "icon": "settings_input_hdmi"
     }
   ],
