--- a/ITB-3306/config.json
+++ b/ITB-3306/config.json
@@ -6,6 +6,10 @@
         {
             "name": "VIA1",
             "icon": "settings_input_antenna"
+        },
+        {
+            "name": "HDMI1",
+            "icon": "settings_input_hdmi"
         }
     ],
     "presets": [
@@ -19,7 +23,8 @@
 				"D1"
 			],
 			"inputs": [
-                "VIA1"
+                "VIA1",
+                "HDMI1"
 			]
 		}
     ],
