--- a/JFSB-B181/config.json
+++ b/JFSB-B181/config.json
@@ -1,35 +1,47 @@
 {
-    "api": [
-        "localhost"
-    ],
-    "panels": [{
-        "hostname": "JFSB-B181-CP1",
-        "uipath": "/blueberry",
-        "preset": "Display",
-        "features": []
-    }],
-    "presets": [{
-        "name": "Display",
-        "displays": [
-            "D1"
-        ],
-        "icon": "tv",
-        "audioDevices": [
-            "D1"
-        ],
-        "inputs": [
-            "HDMI1",
-            "VIA1"
-        ]
-    }],
-    "inputConfiguration": [{
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        },
-        {
-            "name": "VIA1",
-            "icon": "settings_input_antenna"
-        }
-    ],
-    "audioConfiguration": []
+  "api": [ 
+      "localhost"
+  ],
+  "presets": [
+    {
+      "name": "Display",
+      "displays": [
+        "D1"
+      ],
+      "icon": "tv",
+      "audioDevices": [
+        "D1"
+      ],
+      "shareableDisplays": [],
+      "inputs": [
+        "HDMI1",
+        "VIA1"
+      ],
+      "independentAudioDevices": [
+        "MICJK1",
+        "MICJK2",
+        "MIC1"
+      ]
+    }
+  ],
+  "panels": [
+    {
+      "hostname": "JFSB-B181-CP1",
+      "uipath": "/blueberry",
+      "preset": "Projector",
+      "features": [
+      ]
+    }
+  ],
+  "inputConfiguration": [
+    {
+      "name": "HDMI1",
+      "icon": "settings_input_hdmi"
+    },
+    {
+      "name": "VIA1",
+      "icon": "settings_input_antenna"
+    }
+  ],
+  "audioConfiguration": []
 }
