adding JFSB-B181 configuration

--- a/JFSB-B181/config.json
+++ b/JFSB-B181/config.json
@@ -28,7 +28,7 @@
     {
       "hostname": "JFSB-B181-CP1",
       "uipath": "/blueberry",
-      "preset": "Projector",
+      "preset": "Display",
       "features": [
       ]
     }
