--- a/ITB-1006/config.json
+++ b/ITB-1006/config.json
@@ -28,8 +28,7 @@
 			],
 			"inputs": [
                 "HDMI1",
-                "VIA1",
-                "Overflow"
+                "VIA1"
 			],
 			"independentAudioDevices": [
 			]
